src/MiniJava/Tests/DriverTests/bad_args.mj
class Main
{
    public static void main()
    {
        Foo foo;
        foo = new Foo();
        foo.foo();
        foo.foo(true);
        foo.foo(10, true);
        foo.bar(1);
        foo.bar(true);
        foo.bar(new void[10]);
        foo.bar(new Foo[10]);
        foo.bar(foo.bar(null));
    }
}
class Foo
{
    public void foo(int x) {}
    public void bar(Foo f) {}
}
class Bar extends Foo {}
